--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 		</style>
 	</head>
 	<body>
-		<div class="card">
-			<div class="product__image">
-				<picture>
+		<main>
+			<article class="card__container">
+				<picture class="card__picture">
 					<source
 						media="(max-width: 600px)"
 						srcset="./images/image-product-mobile.jpg"
@@ -49,19 +49,22 @@
 						alt="Bottle of eau de parfum"
 					/>
 				</picture>
-			</div>
 
-			<div class="product__info__wrapper">
-				<div class="product__info">
-					<p class="product__category">Perfume</p>
-					<h1 class="product__title">Gabrielle Essence Eau De Parfum</h1>
-					<p class="product__description">
+				<div class="card__content">
+					<p class="card__category">Perfume</p>
+					<h1 class="card__title">Gabrielle Essence Eau De Parfum</h1>
+					<p class="card__description">
 						A floral, solar and voluptuous interpretation composed by Olivier
 						Polge, Perfumer-Creator for the House of CHANEL.
 					</p>
-					<div class="product__price">
+					<div class="card__price">
 						<div class="current-price">$149.99</div>
-						<div class="original-price">$169.99</div>
+						<div class="original-price">
+							<del>$169.99</del>
+							<div class="sr-only">
+								$169.99 is the old price. $149.99 is the current price.
+							</div>
+						</div>
 					</div>
 
 					<button class="add-to-cart">
@@ -74,14 +77,16 @@
 						Add to Cart
 					</button>
 				</div>
-			</div>
-		</div>
+			</article>
+		</main>
 
-		<div class="attribution">
-			Challenge by
-			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-				>Frontend Mentor</a
-			>. Coded by <a href="https://github.com/akshaypatel99">Akshay Patel</a>.
-		</div>
+		<footer>
+			<div class="attribution">
+				Challenge by
+				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="https://github.com/akshaypatel99">Akshay Patel</a>.
+			</div>
+		</footer>
 	</body>
 </html>
