Improve accessibility on prices

--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
 						Polge, Perfumer-Creator for the House of CHANEL.
 					</p>
 					<div class="product__price">
-						<div class="current-price">$149.99</div>
+						<div class="current-price">
+							<span class="sr-only">Current price:</span>$149.99
+						</div>
 						<div class="original-price">
-							<s>$169.99</s>
-							<div class="sr-only">
-								$169.99 is the old price. $149.99 is the current price.
-							</div>
+							<span class="sr-only">Old price:</span><s>$169.99</s>
 						</div>
 					</div>
 
